--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
         integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Restaurants Website</title>
+    <title>Restaurant Website</title>
 
 </head>
 
@@ -241,7 +241,7 @@
     </section>
 
     <footer id="footer">
-        <h2>Restaurants Website &copy; all rights reserved</h2>
+        <h2>Restaurant Website &copy; all rights reserved</h2>
     </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
